@@ -17,21 +17,20 @@ VERSION = "1.0.0"
 
 
 import urlparse, re, httplib
-from BeautifulSoup import BeautifulSoup
+from vendor.BeautifulSoup import BeautifulSoup
 
 
 D_PORT = 80
 D_TIMEOUT = 15
 
-T_WPRESS     = 1000
-V_WPRESS_COM =    1
 
+def gethcli(location, port=D_PORT, timeout=D_TIMEOUT):
+    return httplib.HTTPConnection(location, port, timeout)
 
 def gettype(url):
-    split = urlparse.urlsplit(url)
+    url = urlparse.urlsplit(url)
     type = None
     client = None
-    soup = None
 
     # 
     # from location
@@ -41,37 +40,41 @@ def gettype(url):
 
         ### WordPress.com ###
 
-        if re.match("(.+)\.wordpress\.com", split.netloc):
-            type = TypeWordPress(split.netloc, client)
-            type.setver(V_WPRESS_COM)
+        if re.match("(.+)\.wordpress\.com", url.netloc):
+            from blogtype import wordpress
+            if client == None: client = gethcli(url.netloc)
+            type = wordpress.WordPress(url.netloc, client)
+            type.setver(wordpress.VERSION_WORDPRESS_COM)
 
     # 
     # from body
     # 
 
+    body = None
+
     if type == None:
         if client == None:
-            port = split.port if split.port != None else D_PORT
-            client = httplib.HTTPConnection(split.netloc, port, timeout=D_TIMEOUT)
+            port = url.port if url.port != None else D_PORT
+            client = gethcli(url.netloc, port)
             client.request("GET", "/")
 
             try:
                 response = client.getresponse()
                 if response.status == 200:
-                    soup = BeautifulSoup(response.read())
+                    body = BeautifulSoup(response.read())
             except:
                 pass
 
-    if type == None and soup:
+    if type == None and body:
 
         ### WordPress.com ###
 
-        if re.search("WordPress\.com", 
-                     str(soup.find("meta", content="WordPress.com"))):
-            type = TypeWordPress(split.netloc, client)
-            type.setver(V_WPRESS_COM)
+        if re.search("WordPress\.com", str(body.find("meta", content="WordPress.com"))):
+            from blogtype import wordpress
+            type = wordpress.WordPress(url.netloc, client)
+            type.setver(wordpress.VERSION_WORDPRESS_COM)
 
-    if type == None and soup:
+    if type == None and body:
 
         ### Other... ###
 
@@ -80,80 +83,11 @@ def gettype(url):
     return type
 
 
-class BlogType(object):
-    location         = None
-    client           = None
-    id               = 0
-    type             = None
-    version          = None
-    revision         = None
-    url              = None
-    url_ok           = False
-    url_admin        = None
-    url_admin_ok     = False
-    login            = None
-
-    def setver(self, v):
-        pass
-
-class TypeWordPress(BlogType):
-    versions = { 
-        V_WPRESS_COM : 
-        { 
-            'name'     : "wordpress.com", 
-            'revision' : 1 
-        }
-    }
-
-    def __init__(self, location, client=None):
-        self.location = location
-        self.client   = client
-        self.id       = T_WPRESS
-        self.type     = "WordPress"
-
-    def setver(self, v):
-        version = self.versions[v]
-        self.id = self.id + v
-        self.version = version['name']
-        self.revision = version['revision']
-        self.url = "http://" + self.location
-        rel_url_admin = "/wp-login.php"
-        self.url_admin = self.url + rel_url_admin
-        split = re.split("\.", self.location)
-        self.login = split[0]
-
-        if self.client == None:
-            self.client = httplib.HTTPConnection(self.location, 
-                                                 D_PORT, 
-                                                 timeout=D_TIMEOUT)
-
-        # test url
-
-        if self.url_ok == False:
-            self.client.request("GET", "/")
-
-            try:
-                response = self.client.getresponse()
-                self.url_ok = True if response.status == 200 else False
-            except:
-                self.url_ok = False
-
-        # test url admin
-
-        self.client.request("GET", rel_url_admin)
-
-        try:
-            response = self.client.getresponse()
-            self.url_admin_ok = True if response.status == 200 else False
-        except:
-            self.url_admin_ok = False
-
-
 if __name__ == '__main__':
-    url = "http://test.wordpress.com/"
-    print gettype(url)
-    #url = "http://blog100nexo.com/"
+    #url = "http://test.wordpress.com/"
     #print gettype(url)
+    url = "http://blog100nexo.com/"
+    print gettype(url)
     #url = "http://asdqwezxcwer.wordpress.com/"
     #print gettype(url)
     #url = "http://www.cnn.com/"
