@@ -1,0 +1,14 @@
+class BlogType(object):
+    location         = None
+    client           = None
+    id               = 0
+    name             = None
+    version          = None
+    url              = None
+    url_ok           = False
+    url_admin        = None
+    url_admin_ok     = False
+    login            = None
+
+    def setver(self, version):
+        pass
