@@ -71,3 +71,11 @@ data, etc)
 backend
 
 HORAS TRABALHADAS: 7h
+
+==========
+09/04/2009
+==========
+
+- Organizacao dos scripts no backend
+
+HORAS TRABALHADAS: 2h
